JumpScript/tests/baselines/reference/comparisonOperatorWithNoRelationshipObjectsOnProperty.errors.txt
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnProperty.jump(23,12): error TS2365: Operator '<' cannot be applied to types 'A1' and 'B1'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnProperty.jump(24,12): error TS2365: Operator '<' cannot be applied to types 'A2' and 'B2'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnProperty.jump(26,12): error TS2365: Operator '<' cannot be applied to types 'B1' and 'A1'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnProperty.jump(27,12): error TS2365: Operator '<' cannot be applied to types 'B2' and 'A2'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnProperty.jump(30,12): error TS2365: Operator '>' cannot be applied to types 'A1' and 'B1'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnProperty.jump(31,12): error TS2365: Operator '>' cannot be applied to types 'A2' and 'B2'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnProperty.jump(33,12): error TS2365: Operator '>' cannot be applied to types 'B1' and 'A1'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnProperty.jump(34,12): error TS2365: Operator '>' cannot be applied to types 'B2' and 'A2'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnProperty.jump(37,12): error TS2365: Operator '<=' cannot be applied to types 'A1' and 'B1'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnProperty.jump(38,12): error TS2365: Operator '<=' cannot be applied to types 'A2' and 'B2'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnProperty.jump(40,12): error TS2365: Operator '<=' cannot be applied to types 'B1' and 'A1'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnProperty.jump(41,12): error TS2365: Operator '<=' cannot be applied to types 'B2' and 'A2'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnProperty.jump(44,12): error TS2365: Operator '>=' cannot be applied to types 'A1' and 'B1'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnProperty.jump(45,12): error TS2365: Operator '>=' cannot be applied to types 'A2' and 'B2'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnProperty.jump(47,12): error TS2365: Operator '>=' cannot be applied to types 'B1' and 'A1'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnProperty.jump(48,12): error TS2365: Operator '>=' cannot be applied to types 'B2' and 'A2'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnProperty.jump(51,12): error TS2365: Operator '==' cannot be applied to types 'A1' and 'B1'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnProperty.jump(52,12): error TS2365: Operator '==' cannot be applied to types 'A2' and 'B2'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnProperty.jump(54,12): error TS2365: Operator '==' cannot be applied to types 'B1' and 'A1'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnProperty.jump(55,12): error TS2365: Operator '==' cannot be applied to types 'B2' and 'A2'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnProperty.jump(58,12): error TS2365: Operator '!=' cannot be applied to types 'A1' and 'B1'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnProperty.jump(59,12): error TS2365: Operator '!=' cannot be applied to types 'A2' and 'B2'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnProperty.jump(61,12): error TS2365: Operator '!=' cannot be applied to types 'B1' and 'A1'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnProperty.jump(62,12): error TS2365: Operator '!=' cannot be applied to types 'B2' and 'A2'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnProperty.jump(65,12): error TS2365: Operator '===' cannot be applied to types 'A1' and 'B1'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnProperty.jump(66,12): error TS2365: Operator '===' cannot be applied to types 'A2' and 'B2'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnProperty.jump(68,12): error TS2365: Operator '===' cannot be applied to types 'B1' and 'A1'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnProperty.jump(69,12): error TS2365: Operator '===' cannot be applied to types 'B2' and 'A2'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnProperty.jump(72,12): error TS2365: Operator '!==' cannot be applied to types 'A1' and 'B1'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnProperty.jump(73,12): error TS2365: Operator '!==' cannot be applied to types 'A2' and 'B2'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnProperty.jump(75,12): error TS2365: Operator '!==' cannot be applied to types 'B1' and 'A1'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnProperty.jump(76,12): error TS2365: Operator '!==' cannot be applied to types 'B2' and 'A2'.


==== tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnProperty.jump (32 errors) ====
    class A1 {
        public a: number;
    }
    
    class B1 {
        public a: string;
    }
    
    class A2 {
        private a: string;
    }
    
    class B2 {
        private a: string;
    }
    
    var a1: A1;
    var b1: B1;
    var a2: A2;
    var b2: B2;
    
    // operator <
    var r1a1 = a1 < b1;
               ~~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'A1' and 'B1'.
    var r1a2 = a2 < b2;
               ~~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'A2' and 'B2'.
    
    var r1b1 = b1 < a1;
               ~~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'B1' and 'A1'.
    var r1b2 = b2 < a2;
               ~~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'B2' and 'A2'.
    
    // operator >
    var r2a1 = a1 > b1;
               ~~~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'A1' and 'B1'.
    var r2a2 = a2 > b2;
               ~~~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'A2' and 'B2'.
    
    var r2b1 = b1 > a1;
               ~~~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'B1' and 'A1'.
    var r2b2 = b2 > a2;
               ~~~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'B2' and 'A2'.
    
    // operator <=
    var r3a1 = a1 <= b1;
               ~~~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'A1' and 'B1'.
    var r3a2 = a2 <= b2;
               ~~~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'A2' and 'B2'.
    
    var r3b1 = b1 <= a1;
               ~~~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'B1' and 'A1'.
    var r3b2 = b2 <= a2;
               ~~~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'B2' and 'A2'.
    
    // operator >=
    var r4a1 = a1 >= b1;
               ~~~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'A1' and 'B1'.
    var r4a2 = a2 >= b2;
               ~~~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'A2' and 'B2'.
    
    var r4b1 = b1 >= a1;
               ~~~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'B1' and 'A1'.
    var r4b2 = b2 >= a2;
               ~~~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'B2' and 'A2'.
    
    // operator ==
    var r5a1 = a1 == b1;
               ~~~~~~~~
!!! error TS2365: Operator '==' cannot be applied to types 'A1' and 'B1'.
    var r5a2 = a2 == b2;
               ~~~~~~~~
!!! error TS2365: Operator '==' cannot be applied to types 'A2' and 'B2'.
    
    var r5b1 = b1 == a1;
               ~~~~~~~~
!!! error TS2365: Operator '==' cannot be applied to types 'B1' and 'A1'.
    var r5b2 = b2 == a2;
               ~~~~~~~~
!!! error TS2365: Operator '==' cannot be applied to types 'B2' and 'A2'.
    
    // operator !=
    var r6a1 = a1 != b1;
               ~~~~~~~~
!!! error TS2365: Operator '!=' cannot be applied to types 'A1' and 'B1'.
    var r6a2 = a2 != b2;
               ~~~~~~~~
!!! error TS2365: Operator '!=' cannot be applied to types 'A2' and 'B2'.
    
    var r6b1 = b1 != a1;
               ~~~~~~~~
!!! error TS2365: Operator '!=' cannot be applied to types 'B1' and 'A1'.
    var r6b2 = b2 != a2;
               ~~~~~~~~
!!! error TS2365: Operator '!=' cannot be applied to types 'B2' and 'A2'.
    
    // operator ===
    var r7a1 = a1 === b1;
               ~~~~~~~~~
!!! error TS2365: Operator '===' cannot be applied to types 'A1' and 'B1'.
    var r7a2 = a2 === b2;
               ~~~~~~~~~
!!! error TS2365: Operator '===' cannot be applied to types 'A2' and 'B2'.
    
    var r7b1 = b1 === a1;
               ~~~~~~~~~
!!! error TS2365: Operator '===' cannot be applied to types 'B1' and 'A1'.
    var r7b2 = b2 === a2;
               ~~~~~~~~~
!!! error TS2365: Operator '===' cannot be applied to types 'B2' and 'A2'.
    
    // operator !==
    var r8a1 = a1 !== b1;
               ~~~~~~~~~
!!! error TS2365: Operator '!==' cannot be applied to types 'A1' and 'B1'.
    var r8a2 = a2 !== b2;
               ~~~~~~~~~
!!! error TS2365: Operator '!==' cannot be applied to types 'A2' and 'B2'.
    
    var r8b1 = b1 !== a1;
               ~~~~~~~~~
!!! error TS2365: Operator '!==' cannot be applied to types 'B1' and 'A1'.
    var r8b2 = b2 !== a2;
               ~~~~~~~~~
!!! error TS2365: Operator '!==' cannot be applied to types 'B2' and 'A2'.